--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -110,13 +110,15 @@
  swedish_the_forestry_act_reason: "For generations, the #light_green forest#! has been the very heart of the #yellow Swedish soul#!, a source of both livelihood and deep-seated identity. But the great #blue sawmill industry#! and the #blue charcoal kilns#! of #yellow Bergslagen#! have taken a heavy toll on this ancient relationship. The ceaseless demand for timber has left our once endless bounty looking thin and worn. Yet, a new idea is taking root. A #white 'conservation movement'#! is stirring in the Parliament, arguing that our forests are a finite inheritance to be managed, not simply exploited.\n\nThe debates are often heated, but the direction seems clear. The new #gold Forestry Act (Skogsvårdslagen)#!, which requires replanting and oversight from forestry inspectors. There are also more ambitious calls to preserve entire landscapes, creating vast #gold national parks#! for #blue science#! and #blue tourism#!. This is a moment of truth for our nation commitment to safeguarding the wild beauty that has long defined us."
  swedish_nordic_monarchy: "The House of Bernadotte"
  swedish_nordic_monarchy_reason: "#yellow The House of Bernadotte#!, founded by the former French marshal\n#yellow Karl XIV Johan#!, is a relatively new dynasty in #yellow Sweden#!.\nWhile the legitimacy of royal houses is increasingly called into question by republican and nationalist passions across Europe, the #yellow Bernadottes#! have defied this trend, earning overwhelming popular support among the Swedish people.\n\nTo endure, the dynasty must cement its place not through ancient right, but through its continued ability to appeal to a broad range of subjects and adapt to the changing political landscape."
- swedish_nordic_monarchy_goal: "The House of Bernadotte maintains its widespread support, ensuring the monarchy's future."
+ swedish_nordic_monarchy_goal: "The House of Bernadotte maintains its widespread support for 30 years, ensuring the monarchy's future."
  crowns_control_progress_bar: "The Crown Control on The Government"
  crowns_control_progress_bar_desc: ""
  ttb_royalist_absolutist_movements: "Royalist and Absolutism movements"
  ttb_radical_movements: "Radical movements"
  ttb_anti_monarchist_in_government: "Anti-Monarchists in government"
  ttb_monarchist_in_government: "Monarchists in government"
+ swedish_norwegian_union: "The Union"
+ swedish_norwegian_union_reason: "The personal union with Norway, established after the Napoleonic Wars, is a constant source of political tension. Though the Swedish crown is vested with the rule of both nations, the Norwegians maintain their own constitution, a separate government, and a fiercely independent spirit. This arrangement, once seen as a great triumph for Sweden, is now viewed as a potential powder keg.\n\nThe House of Bernadotte with the government must now navigate the competing interests of a dominant Sweden and a proud Norway, lest the union be torn asunder by the forces of liberalism and nationalism."
 
  nor_the_great_transformation: "The Great Transformation"
  nor_the_great_transformation_reason: "Norway has taken the first steps towards industrialising it's industries, all it got to do now is to become more reliant on itself to become a competetive force in the Western world."
@@ -225,6 +227,7 @@
  sweden_monarchy_influence: "Monarchy Influence"
  sweden_monarchy_diminishing_influence: "Monarchy diminishing Influence"
  sweden_strong_king: "Strong King"
+ sweden_rally_around_the_king: "Rally Around The King"
 
  norway_abolishment_of_new_aristocrats: "Abolished Creation of New Aristocrat Titles"
  norway_det_store_hamskiftet: "Det store hamskiftet"
