--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -74,8 +74,17 @@
  swedish_the_end_of_lantmanna_party: "End of Agrarian Politics"
  swedish_the_end_of_lantmanna_party_reason: "Recent shifts in politics has made #green Agrarian Politics#! less and less relevant in modern politics."
  swedish_restoration_of_the_military: "Restoration of Military Glory"
- swedish_restoration_of_the_military_reason: "The #yellow Swedish military#! has been wounded since the loss of #yellow Finland#! and despite reforms being made and corruption being on an all-time low, it is clear that the pride of our military is wounded. Things need to change for it to become better."
+ swedish_restoration_of_the_military_reason: "The recent, long-overdue repeal of the #white Allotment System (indelningsverket)#! has provided a new opportunity. While this centuries-old system once served #yellow Sweden#! well, its outdated methods and regionalized structures are no longer capable of supporting a #blue modern military#!. Since the loss of #yellow Finland#!, the #yellow Swedish#! #blue armed forces#! have been plagued by tactical and logistical #red deficiencies#! that have left us #red vulnerable#! on the international stage.\n\nTo secure #yellow Sweden's#! future, a complete and #blue comprehensive reorganization#! is not merely an option, it is a necessity. This monumental undertaking will require us to centralize command, standardize training, and establish a professional, standing army fit for a new century.\n\nThe project will demand the full cooperation of both #gold civilian#! and #blue military#! authorities to succeed. The alternative is continued irrelevance and weakness in a world where only the strong survive."
+ swedish_restoration_of_the_military_flavor: "This is not a project of glory, but one of survival, to restore the operational strength and dignity of the Swedish armed forces for generations to come. The alternative is continued irrelevance and weakness in a world where only the strong survive."
  has_completed_champions_of_national_defense: "Has completed Question of National Defense Journal Entry"
+ ttb_reforming_swedish_army_progress_bar: "Reorganization off the Swedish armed forces"
+ ttb_reforming_swedish_army_progress_bar_desc: "Reorganization off the Swedish armed forces"
+ ttb_reforming_swedish_army_progress_succeeds: "The Swedish Armed Forces Has Been Reorganized"
+ ttb_armed_forces_in_government: "The Armed Forces is in government"
+ ttb_technology_general_staff_researched: "General staff has been researched"
+ ttb_technology_electric_telegraph_researched: "Electric telegraph has been researched"
+ ttb_technology_enlistment_offices_researched: "Enlistment offices has been researched"
+ ttb_army_power_projection: "Our army projection"
  swedish_glasriket: "The Kingdom of Glass"
  swedish_glasriket_reason: "Develop #light_green Småland's#! unique #blue glassmaking#! traditions into a thriving industrial and artistic powerhouse, capturing both domestic and international markets."
  swedish_sundsvall_timber: "Sundsvall: The Timber Capital"
