changes to the restoration_of_the_military

--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -79,10 +79,8 @@
  has_completed_champions_of_national_defense: "Has completed Question of National Defense Journal Entry"
  ttb_reforming_swedish_army_progress_bar: "Reorganization off the Swedish armed forces"
  ttb_reforming_swedish_army_progress_bar_desc: "Reorganization off the Swedish armed forces"
- ttb_reforming_swedish_army_material_button: "Invest in new material"
- ttb_reforming_swedish_army_material_button_desc: "Invest in new material"
- ttb_reforming_swedish_army_training_button: "Invest in training"
- ttb_reforming_swedish_army_training_button_desc: "Invest in training"
+ ttb_reforming_swedish_army_training_button: "Invest in the army's training"
+ ttb_reforming_swedish_army_training_button_desc: "Invest in the army's training"
  ttb_armed_forces_in_government: "The Armed Forces is in government"
  ttb_technology_general_staff_researched: "General staff has been researched"
  ttb_technology_electric_telegraph_researched: "Electric telegraph has been researched"
@@ -239,8 +237,7 @@
  sweden_monarchy_diminishing_influence: "Monarchy diminishing Influence"
  sweden_strong_king: "Strong King"
  sweden_rally_around_the_king: "Rally Around The King"
- sweden_army_material_investment: "Army Material Investments"
- sweden_army_training_investment: "Army Training Investments"
+ sweden_army_investment: "Army Training Investments"
 
  norway_abolishment_of_new_aristocrats: "Abolished Creation of New Aristocrat Titles"
  norway_det_store_hamskiftet: "Det store hamskiftet"
