bug fix: changed rural folk modified from NOR to SWE

--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -238,6 +238,7 @@
  sweden_strong_king: "Strong King"
  sweden_rally_around_the_king: "Rally Around The King"
  sweden_army_investment: "Army Training Investments"
+ sweden_strong_independent_farmer_culture: "Strong independent Farmer Culture"
 
  norway_abolishment_of_new_aristocrats: "Abolished Creation of New Aristocrat Titles"
  norway_det_store_hamskiftet: "Det store hamskiftet"
